fix Runtime.exec() deprecated usage