@@ -298,7 +298,7 @@ public class SambaPanel extends javax.swing.JPanel {
 
   private void jButton1ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton1ActionPerformed
     try {
-      Runtime.getRuntime().exec("jfhelp jfconfig-samba");
+      Runtime.getRuntime().exec(new String[] {"jfhelp", "jfconfig-samba"});
     } catch (Exception e) {
 
     }
